--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -239,14 +239,14 @@ bind = $mainMod, W, exec, wlogout -p layer-shell
 # Screeshot binds
 bind =,PRINT , exec, hyprshot -m region
 
-
 # Volume
 bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindl = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+
 # Brightness
-bind = ,XF86MonBrightnessDown, exec, brightnessctl s 3%-
-bind = ,XF86MonBrightnessUp, exec, brightnessctl s +3%
+bindl = ,XF86MonBrightnessDown, exec, brightnessctl s 0.9%-
+bindl = ,XF86MonBrightnessUp, exec, brightnessctl s 0.9%+
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
