--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -153,8 +153,8 @@ animations {
     animation = fadeLayersIn, 1, 1.79, almostLinear
     animation = fadeLayersOut, 1, 1.39, almostLinear
     animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+    animation = workspacesIn, 1, 1.21, almostLinear, slidefade 40% #default speed = 1.21
+    animation = workspacesOut, 1, 1.94, almostLinear, slidefade 40% #default speed = 1.94
 }
 
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
@@ -235,7 +235,9 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, F, exec, $browser
 bind = $mainMod, T, exec, telegram-desktop
 bind = $mainMod, W, exec, wlogout -p layer-shell
-
+bind = $mainMod, K, exec, playerctl play-pause
+bind = $mainMod, =, exec, playerctl next
+bind = $mainMod, -, exec, playerctl previous
 # Screeshot binds
 bind =,PRINT , exec, hyprshot -m region
 
