--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -236,8 +236,8 @@ bind = $mainMod, F, exec, $browser
 bind = $mainMod, T, exec, telegram-desktop
 bind = $mainMod, W, exec, wlogout -p layer-shell
 bind = $mainMod, K, exec, playerctl play-pause
-bind = $mainMod, =, exec, playerctl next
-bind = $mainMod, -, exec, playerctl previous
+bind = $mainMod, equal, exec, playerctl next
+bind = $mainMod, minus, exec, playerctl previous
 # Screeshot binds
 bind =,PRINT , exec, hyprshot -m region
 
