--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -33,9 +33,19 @@
 ### MONITORS ###
 ################
 
+env = mon1info, 1920x1080@144, auto, 1
+
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor= eDP-1, 1920x1080@144, 0x0, 1
-monitor= eDP-2, 1920x1080@144, 0x0, 1
+#monitor= eDP-1, disable
+monitor= DP-2, 2560x1440@144, 0x0, 1
+#
+xwayland {
+  force_zero_scaling =true
+}
+#env = GDK_SCALE,1
+#env = XCURSOR_SIZE, 10
+#env = WLR_NO_HARDWARE_CURSORS,1
 
 ###################
 ### MY PROGRAMS ###
@@ -61,11 +71,13 @@ $menu = wofi --show drun
 # exec-once = nm-applet &
 exec-once = hyprpaper
 exec-once = waybar
-exec-once = rog-control-center
+#exec-once = rog-control-center
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hypridle
-#exec-once = sudo ip link set wlp3s0 down
-
+# execute for second monitor
+exec-once = /home/platon/.config/hypr/scripts/check_monitor.sh
+# execute for asus laptop
+exec-once = asusctl armoury ppt_pl1_spl 20 && asusctl armoury ppt_pl2_sppt 20 && asusctl armoury ppt_pl3_fppt 35 && asusctl armoury panel_overdrive 0 && asusctl profile -P Balanced && asusctl armoury nv_dynamic_boost 10
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
@@ -84,8 +96,8 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 3
-    gaps_out = 3 # default: gaps_out = 20
+    gaps_in = 5
+    gaps_out = 10 # default: gaps_out = 20
 
     border_size = 1
 
@@ -180,7 +192,7 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    force_default_wallpaper = 1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
@@ -200,9 +212,10 @@ input {
     follow_mouse = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
-
+    
     touchpad {
         natural_scroll = false
+	middle_button_emulation=0
     }
 }
 
@@ -218,104 +231,20 @@ gestures {
 #     sensitivity = -0.5
 #}
 
+#glorious-model o minus
+device {
+    name = glorious-model-o--wireless
+    sensitivity = -0.2
+    
+}
 # touchpad 
 device {
     name = asuf1204:00-2808:0202-touchpad
     sensitivity = 0.4
+
 }
 
-###################
-### KEYBINDINGS ###
-###################
-
-# See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
-
-# My binds:
-bind = $mainMod, F, exec, $browser
-bind = $mainMod, T, exec, telegram-desktop
-bind = $mainMod, W, exec, wlogout -p layer-shell
-bind = $mainMod, K, exec, playerctl play-pause
-bind = $mainMod, equal, exec, playerctl next
-bind = $mainMod, minus, exec, playerctl previous
-# Screeshot binds
-bind =,PRINT , exec, hyprshot -m region
-
-# Volume
-bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindl = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-
-# Brightness
-bindl = ,XF86MonBrightnessDown, exec, brightnessctl s 0.9%-
-bindl = ,XF86MonBrightnessUp, exec, brightnessctl s 0.9%+
-
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, RETURN, exec, $terminal
-bind = $mainMod, Q, killactive,
-bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
-
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
-
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-
-# Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
-
-# Requires playerctl
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
-
+source = /home/platon/.config/hypr/modules/binds.conf
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
