update config/hypr... && update waybar/config...

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -3,8 +3,8 @@ general {
 }
 
 background {
-  path = $XDG_DATA_HOME/images/ghost-of-thusima.jpg
-  blur_passes = 2
+  path = ~/Pictures/fantasy-art-dragon.jpg
+  blur_passes = 1
 }
 
 input-field {
@@ -46,19 +46,18 @@ label {
   valign = center
 }
 
-label {
-  text = $FPRINTMESSAGE
-  text_align = center
-
-  color = rgba(255, 255, 255, 1.0)
-
-  font_family = JetBrains Mono NFM
-  font_size = 16
-
-  position = 0, -70
-  halign = center
-  valign = center
-}
+#label {
+#  text = $FPRINTMESSAGE
+#  text_align = center
+#  color = rgba(255, 255, 255, 1.0)
+#
+#  font_family = JetBrains Mono NFM
+#  font_size = 16
+#
+#  position = 0, -70
+#  halign = center
+#  valign = center
+#}
 
 label {
   text = User: $USER
