--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/Pictures/sung-jinwoo.jpg
-wallpaper = ,~/Pictures/sung-jinwoo.jpg
+preload = ~/Pictures/fantasy-art-dragon.jpg
+wallpaper = ,~/Pictures/fantasy-art-dragon.jpg
