--- a/.config/hypr/modules/binds.conf
+++ b/.config/hypr/modules/binds.conf
@@ -9,11 +9,14 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # My binds:
 bind = $mainMod, F, exec, $browser
 bind = $mainMod, T, exec, telegram-desktop
-bind = $mainMod, W, exec, wlogout -p layer-shell
+bindl = $mainMod, W, exec, wlogout -p layer-shell
 bindl = $mainMod, K, exec, playerctl play-pause
 bindl = $mainMod, equal, exec, playerctl next
 bindl = $mainMod, minus, exec, playerctl previous
-#bindl = $mainMod, F1, exec, 
+bindl = $mainMod, F1, exec, ~/.config/hypr/scripts/check_monitor.sh
+bindl = $mainMod, F2, exec, bluetoothctl connect 00:C5:85:69:FB:08
+bindl = $mainMod, F3, exec, bluetoothctl disconnect 00:C5:85:69:FB:08
+bind = $mainMod, C, exec, code
 
 #bindl = $mainMod, F1, exec, ~/.config/hypr/gamemode.sh
 # Screeshot binds
@@ -31,7 +34,7 @@ bindl = ,XF86MonBrightnessDown, exec, brightnessctl s 0.9%-
 bindl = ,XF86MonBrightnessUp, exec, brightnessctl s 0.9%+
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, RETURN, exec, $terminal
+bind = $mainMod, I, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
