--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -1,7 +1,8 @@
 general {
     lock_cmd = pidof hyprlock || hyprlock       # avoid starting multiple hyprlock instances.
     before_sleep_cmd = loginctl lock-session    # lock before suspend.
-    after_sleep_cmd = hyprctl dispatch dpms on && supergfxctl -m Hybrid && supergfxctl -m Integrated # to avoid having to press a key twice to turn on the display.
+    before_sleep_cmd = hyprctl switchxkblayout keychron-k3-pro-keyboard 0 # change layout of keyboard to US
+#    after_sleep_cmd = hyprctl dispatch dpms on # to avoid having to press a key twice to turn on the display.
 }
 
 listener {
@@ -24,14 +25,14 @@ listener {
 
 }
 
-listener {
-    timeout = 660                                 # 11min
-    on-timeout = hyprctl dispatch dpms off        # screen off when timeout has passed
-    on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
-}
+#listener {
+ #   timeout = 660                                 # 11min
+#    on-timeout = hyprctl dispatch dpms off        # screen off when timeout has passed
+#    on-resume = hyprctl dispatch dpms on          # screen on when activity is detected after timeout has fired.
+#}
 
-listener {
-    timeout = 1800             # 30min
-    on-resume = hyprctl keyword device:at-translated-set-2-keyboard:layout us
-    on-timeout = systemctl suspend                # suspend pc
-}
+#listener {
+  #  timeout = 1800             # 30min
+ #   on-resume = hyprctl keyword device:at-translated-set-2-keyboard:layout us
+#    on-timeout = systemctl suspend                # suspend pc
+#}
